# Netlat-Analyser

./: .gitignore  Makefile  README.md  pyproject.toml
dashboards/: grafana_dashboard.json
deploy/: Dockerfile  RUNBOOK.md  prometheus.yml
deploy/k8s/: daemonset.yaml
scripts/: demo.py  generate_test_pcaps.py  k8s_collect.sh
src/netlat/: __init__.py  cli.py
src/netlat/analysis/: anomaly.py  pipeline.py  retransmit.py  rtt.py
src/netlat/capture/: __init__.py  tcpdump.py
src/netlat/export/: prometheus.py
src/netlat/flows/: models.py  tracker.py
src/netlat/pcap/: dpkt_backend.py  parser.py
src/netlat/report/: render.py
src/netlat/util/: bpf.py  logging.py  time.py
tests/: conftest.py  test_anomaly.py  test_capture.py  test_integration.py  test_k8s.py  test_models.py  test_parser.py  test_pipeline.py  test_prometheus.py  test_retransmit.py  test_rtt.py  test_tracker.py
